--- a/final-pjt-total/final-pjt-front/package.json
+++ b/final-pjt-total/final-pjt-front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
