--- a/final-pjt-total/final-pjt-front/package.json
+++ b/final-pjt-total/final-pjt-front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
