--- a/final-pjt-total/final-pjt-front/package.json
+++ b/final-pjt-total/final-pjt-front/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/bootstrap": "^5.2.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
